--- a/docs/0102.md
+++ b/docs/0102.md
@@ -1,5 +1,158 @@
-# WebUSB / WebSerial / WebHID 简介
 
-## 内容概述
+## 📘 第一章第二节：WebUSB / WebSerial / WebHID 简介
 
-请在此处添加详细内容...
+在浏览器端，我们可以通过 **WebUSB、WebSerial 和 WebHID** 三种接口来访问一些常见的外设设备（如扫码枪、手柄、开发板、LED 控制器等），这三个 API 是浏览器为硬件交互开放的低层能力接口。
+
+---
+
+## 🧩 一、三者对比与适用场景
+
+| 特性对比     | WebUSB              | WebSerial             | WebHID                       |
+| -------- | ------------------- | --------------------- | ---------------------------- |
+| 访问层级     | USB 设备（原始协议）        | 串口通信设备（如 Arduino）     | HID 设备（如键盘、手柄、扫码器）           |
+| 协议要求     | 需支持 USB 通信          | 串口标准（9600/115200等波特率） | HID 规范（带 usagePage、reportId） |
+| 难度       | 高（需要了解 USB 协议细节）    | 中（需了解串口协议）            | 中等（可选 report 监听）             |
+| 易出错程度    | 高（设备支持有限、权限复杂）      | 中等                    | 低（支持更广泛）                     |
+| 应用示例     | Arduino 板、STM32、打印机 | 热敏打印机、开发板             | 蓝牙手柄、扫码器、键盘                  |
+| 支持浏览器    | 仅 Chrome 系、Edge     | 仅 Chrome 系            | 仅 Chrome 系                   |
+| HTTPS 限制 | 是                   | 是                     | 是                            |
+
+---
+
+## 🧪 二、WebUSB 简介
+
+### 💡 适用场景：
+
+* 自定义 USB 外设（需要你知道厂商 ID、产品 ID）
+* Arduino / STM32 自定义通讯协议
+* 医疗设备、定制控制设备
+
+### ✅ 示例代码（连接设备）：
+
+```js
+const device = await navigator.usb.requestDevice({
+  filters: [{ vendorId: 0x2341 }] // Arduino 的 Vendor ID 示例
+});
+
+await device.open();
+await device.selectConfiguration(1);
+await device.claimInterface(2);
+
+// 发送数据
+await device.transferOut(4, new Uint8Array([1, 2, 3]));
+
+// 接收数据
+const result = await device.transferIn(5, 64);
+console.log('接收数据:', result.data);
+```
+
+### ⚠️ 注意点：
+
+* 很多商用设备禁用了“Web接口支持”，需自定义固件。
+* 必须在 HTTPS 或 localhost 上运行。
+* 用户必须点击触发 `requestDevice()`，不能自动连接。
+* 调试难度高，需要理解 USB descriptor 和接口号。
+
+---
+
+## 🔌 三、WebSerial 简介
+
+### 💡 适用场景：
+
+* Arduino 开发板
+* 热敏打印机、PLC、串口扫码器
+* 医疗设备 / 工控设备（RS232 转 USB）
+
+### ✅ 示例代码（连接串口）：
+
+```js
+const port = await navigator.serial.requestPort();
+await port.open({ baudRate: 9600 });
+
+const reader = port.readable.getReader();
+
+while (true) {
+  const { value, done } = await reader.read();
+  if (done) break;
+  console.log('串口读取:', new TextDecoder().decode(value));
+}
+```
+
+### ✍️ 写入数据：
+
+```js
+const writer = port.writable.getWriter();
+await writer.write(new TextEncoder().encode('Hello Device\n'));
+writer.releaseLock();
+```
+
+### ⚠️ 注意点：
+
+* 同样需 HTTPS 页面。
+* 浏览器支持串口通讯较新（仅支持 Chrome）。
+* 用户必须手动授权串口（无法自动重连）。
+
+---
+
+## 🎮 四、WebHID 简介
+
+### 💡 适用场景：
+
+* USB / 蓝牙手柄（如 Xbox / PS 手柄）
+* 条码枪（HID 模式）
+* 键盘、鼠标、游戏外设
+
+### ✅ 示例代码（监听设备输入）：
+
+```js
+const devices = await navigator.hid.requestDevice({
+  filters: [{ vendorId: 0x046d }] // 示例为 Logitech
+});
+
+const device = devices[0];
+await device.open();
+
+device.addEventListener('inputreport', event => {
+  const { data, reportId } = event;
+  console.log('HID 输入数据：', reportId, data);
+});
+```
+
+### ⚠️ 注意点：
+
+* WebHID 可识别更广泛的 HID 设备；
+* 报文为字节数组（你需解析不同 reportId 含义）；
+* 默认 HID 键盘/鼠标等可能被操作系统占用（需自行规避冲突）；
+* 并非所有设备厂商暴露 HID profile；
+
+---
+
+## 🧠 五、开发建议与实践建议
+
+| 目标           | 推荐 API               | 说明                   |
+| ------------ | -------------------- | -------------------- |
+| 接入 Arduino   | WebSerial            | 更简单稳定，WebUSB 需要自定义协议 |
+| 热敏小票机打印      | WebSerial            | 多数打印机走串口，WebUSB 不兼容  |
+| 接扫码枪（键盘模拟）   | 无需 API               | 可直接监听 `keydown` 即可   |
+| 接扫码枪（HID 模式） | WebHID               | 可识别并识别原始扫码数据包        |
+| 游戏手柄支持       | WebHID / Gamepad API | WebHID 更底层、可识别更多按钮   |
+| 自定义 USB 设备   | WebUSB               | 高自由度但调试难             |
+
+---
+
+## ✅ 小结（一句话总结）：
+
+| 接口            | 一句话理解                 |
+| ------------- | --------------------- |
+| **WebUSB**    | “我什么都要控制，但你得给我底层协议”   |
+| **WebSerial** | “设备像个串口，我可以直接发文字收文字”  |
+| **WebHID**    | “只要是手柄、扫码枪，我都能听懂你的报告” |
+
+---
+
+是否需要我针对这三个 API 各自做一个“完整实战小项目”，例如：
+
+* WebSerial：连接 Arduino 点亮灯；
+* WebUSB：读取自定义 USB 设备 ID；
+* WebHID：监听扫码器原始数据。
+
