--- a/docs/0103.md
+++ b/docs/0103.md
@@ -1,5 +1,167 @@
-# Electron、Node.js 与本地驱动交互方式
+## 📘 第一章第三节：Electron、Node.js 与本地驱动交互方式
 
-## 内容概述
+---
 
-请在此处添加详细内容...
+硬件能力受限是浏览器的天然缺陷，因此在需要**完整、底层、持续连接、后台执行**等能力时，**桌面端方案（Electron + Node.js）是首选**。
+
+本节将带你全面了解：
+
+* Electron 架构
+* Node.js 操作硬件方式
+* 如何接入驱动和本地 API
+* 常用模块与实战策略
+
+---
+
+## 🧠 一、为什么需要 Electron + Node.js 操作硬件？
+
+| 浏览器         | 桌面端                          |
+| ----------- | ---------------------------- |
+| 权限受限、无法调用驱动 | 拥有本地全部权限                     |
+| 无法后台运行      | 可后台监听、托盘、守护进程                |
+| 只能调用标准 API  | 可通过系统 API / DLL / EXE 完全控制硬件 |
+
+例如你要做这些事：
+
+* 自动打印 PDF → ❌ 浏览器不能做到 → ✅ Node.js 可直接控制打印机；
+* 后台监听串口设备插拔 → ❌ 浏览器关闭即失效 → ✅ Electron 可驻留后台；
+* 调用摄像头拍照、保存本地 → ❌ 浏览器无法保存 → ✅ Node.js `fs` 写入文件；
+
+---
+
+## 🏗️ 二、Electron 框架架构：双线程设计
+
+Electron 是一个整合了 **Chromium + Node.js** 的桌面开发框架，核心概念如下：
+
+| 模块              | 说明              | 能力                        |
+| --------------- | --------------- | ------------------------- |
+| **Main 进程**     | Electron 应用启动入口 | 可以访问本地操作系统、启动窗口、调用驱动      |
+| **Renderer 进程** | 每个窗口对应的前端页面     | 拥有 Node.js 能力（默认），可以调 API |
+| **Preload 脚本**  | 页面加载前注入脚本       | 传递安全桥梁，提升隔离性              |
+
+你可以：
+
+* 在 **Main** 中加载窗口、初始化硬件服务；
+* 在 **Renderer** 页面中发出前端事件；
+* 使用 `ipcMain` 与 `ipcRenderer` 实现双向通信。
+
+---
+
+## 🧩 三、Node.js 操作硬件的核心方式
+
+### 🔌 1. 串口设备（扫码器、开发板、打印机）
+
+```bash
+npm install serialport
+```
+
+```js
+const SerialPort = require('serialport');
+const port = new SerialPort('/dev/ttyUSB0', { baudRate: 9600 });
+
+port.on('data', data => {
+  console.log('串口收到数据:', data.toString());
+});
+```
+
+### 🧾 2. 打印机操作（支持驱动、PDF、文本、图片打印）
+
+```bash
+npm install printer
+```
+
+```js
+const printer = require('printer');
+
+printer.printDirect({
+  data: '打印内容',
+  printer: printer.getDefaultPrinterName(),
+  type: 'RAW',
+  success: jobID => console.log(`打印任务ID: ${jobID}`),
+  error: err => console.error(err),
+});
+```
+
+### 🎮 3. HID 设备（扫码枪、手柄、刷卡器）
+
+```bash
+npm install node-hid
+```
+
+```js
+const HID = require('node-hid');
+const devices = HID.devices();
+console.log('可用 HID 设备:', devices);
+
+const device = new HID.HID(vendorId, productId);
+device.on('data', data => {
+  console.log('收到 HID 数据:', data);
+});
+```
+
+### 🖨️ 4. 调用操作系统程序或驱动（DLL / CMD / Shell）
+
+```js
+const { exec } = require('child_process');
+exec('start notepad', (err, stdout, stderr) => {
+  if (err) console.error('运行失败', err);
+});
+```
+
+可用于：
+
+* 调用厂商 SDK
+* 控制硬件 DLL 接口
+* 执行系统指令（如打开摄像头软件）
+
+---
+
+## 🧱 四、驱动交互的常见形式
+
+| 类型         | 示例            | 控制方式                    |
+| ---------- | ------------- | ----------------------- |
+| COM 串口     | 扫码枪 / 热敏机     | `serialport`            |
+| HID 设备     | 手柄 / 刷卡器      | `node-hid`              |
+| USB 设备     | U盘 / 自定义板卡    | `usb` 模块或厂商 SDK         |
+| Windows 驱动 | OCR / 摄像头 DLL | `ffi-napi` 或 `exec`     |
+| 打印机        | ESC/POS 热敏机   | `printer`, ESC 字符控制     |
+| 摄像头        | USB 摄像头       | `node-webcam`、OpenCV 调用 |
+
+---
+
+## 📦 五、Electron + 硬件开发项目结构建议
+
+```bash
+your-app/
+├── main.js           # Electron 主进程，初始化窗口与硬件模块
+├── preload.js        # 用于暴露安全 API 给前端
+├── renderer/         # 前端页面（按钮、UI）
+├── devices/
+│   ├── serial.js     # 串口封装
+│   ├── hid.js        # HID 操作封装
+│   └── printer.js    # 打印机控制模块
+├── utils/
+│   └── logger.js     # 日志模块
+```
+
+---
+
+## ⚠️ 注意事项
+
+| 问题                    | 说明                                |
+| --------------------- | --------------------------------- |
+| Electron 默认打开 Node.js | 需手动关闭 `nodeIntegration` 以防 XSS 风险 |
+| 设备识别出错                | 检查驱动是否正确安装、是否需管理员权限运行             |
+| Windows 调用 DLL        | 推荐使用 `ffi-napi`，但兼容性需测试           |
+| 热更新困难                 | 热插拔设备需监听事件动态加载设备列表                |
+
+---
+
+## ✅ 总结
+
+Electron + Node.js 能让你：
+
+* 拥有浏览器 + 本地驱动能力；
+* 构建跨平台 UI；
+* 全面控制硬件行为。
+
