--- a/docs/0104.md
+++ b/docs/0104.md
@@ -1,5 +1,182 @@
-# 开发环境搭建（浏览器权限、Node依赖、驱动安装）
 
-## 内容概述
 
-请在此处添加详细内容...
+## 📘 开发环境搭建
+
+### —— 浏览器权限、Node依赖、驱动安装
+
+本节帮助你快速搭建起一个能进行硬件开发的基础环境，**涵盖 Web 与桌面两条主线**，确保后续操作扫码枪、打印机、摄像头等硬件不出问题。
+
+---
+
+## 🧩 一、浏览器端开发环境准备
+
+### ✅ 1. 使用支持 WebUSB/WebSerial/WebHID 的浏览器
+
+| 浏览器                       | 是否支持    | 推荐版本      |
+| ------------------------- | ------- | --------- |
+| Google Chrome             | ✅ 支持全部  | 80+，建议稳定版 |
+| Microsoft Edge (Chromium) | ✅       | 85+       |
+| Safari / Firefox          | ❌ 基本不支持 | ❌ 不推荐开发   |
+
+#### ⚠️ 建议使用专门的开发浏览器 Profile，开启下列实验特性：
+
+地址栏输入：
+
+```
+chrome://flags/#enable-experimental-web-platform-features
+```
+
+启用：`Experimental Web Platform features`
+
+---
+
+### ✅ 2. 使用 HTTPS 本地开发环境（Web Bluetooth、WebUSB 等要求）
+
+#### 方法一：使用 localhost（自动信任）
+
+```bash
+npm install -g serve
+serve .
+```
+
+#### 方法二：使用自签名证书（适用于远程调试）
+
+* 生成本地开发 SSL 证书（推荐用 mkcert）：
+
+```bash
+brew install mkcert
+mkcert localhost
+```
+
+* 配合本地 devServer 使用（如 Vite / Webpack 配置 `https` 字段）
+
+---
+
+### ✅ 3. 浏览器权限触发机制（重要）
+
+> WebUSB/WebSerial/WebHID 必须由用户手动点击触发连接。
+
+例如：
+
+```js
+const button = document.querySelector('#connect');
+button.addEventListener('click', async () => {
+  const device = await navigator.usb.requestDevice({ filters: [...] });
+});
+```
+
+如果放在 `window.onload` 中直接调用，将会报错：
+❌ `DOMException: Must be handling a user gesture to show a permission request`
+
+---
+
+## 🧰 二、Node.js 本地环境搭建
+
+### ✅ 1. 安装 Node.js 与包管理器
+
+* 推荐版本：Node.js 18.x 或 LTS 最新版本
+* 包管理工具推荐使用 [pnpm](https://pnpm.io/)、[yarn](https://yarnpkg.com/)、\[npm]
+
+```bash
+# 官方安装方式
+https://nodejs.org/
+
+# 查看版本
+node -v
+npm -v
+```
+
+---
+
+### ✅ 2. 初始化项目结构
+
+```bash
+mkdir hardware-project && cd hardware-project
+npm init -y
+npm install serialport node-hid printer --save
+```
+
+> 🔧 可按需安装：
+
+* `serialport`：串口设备
+* `node-hid`：HID 手柄、扫码器
+* `printer`：打印控制
+* `usb`：USB 设备控制（高级）
+
+---
+
+### ✅ 3. 使用 Electron（桌面封装）
+
+```bash
+npm install electron --save-dev
+```
+
+项目结构建议：
+
+```
+hardware-project/
+├── main.js         # Electron 主进程
+├── preload.js      # 渲染前桥接脚本
+├── index.html      # 页面
+├── renderer.js     # 页面 JS
+├── devices/        # 硬件模块封装
+└── package.json
+```
+
+运行方式：
+
+```bash
+npx electron .
+```
+
+---
+
+## 🔌 三、驱动程序安装建议（真实硬件场景）
+
+| 硬件         | 系统要求            | 驱动安装建议          |
+| ---------- | --------------- | --------------- |
+| Arduino    | Win/macOS/Linux | 安装官方 IDE 同时安装驱动 |
+| 扫码枪（USB）   | Plug & Play     | 多数走 HID 或虚拟串口   |
+| 热敏打印机      | Windows 特定驱动    | 按厂商提供的安装        |
+| HID 手柄（蓝牙） | 系统自带驱动          | 一般无需驱动          |
+| USB 摄像头    | 一般自带            | 推荐安装厂商工具        |
+
+> 💡 实用工具：
+>
+> * Windows：Zadig 工具可替换 USB 驱动为 WinUSB（用于 WebUSB 调试）
+> * macOS/Linux：确保 USB 设备权限（如 `/dev/ttyUSB*` 可读写）
+
+---
+
+## 📂 四、推荐调试工具与辅助配置
+
+| 工具                         | 说明                     |
+| -------------------------- | ---------------------- |
+| `USBDeview`（Win）           | 查看 USB 连接历史与 Vendor ID |
+| `serial-monitor`（Node CLI） | 串口调试辅助工具               |
+| `chrome://device-log`      | 查看蓝牙/WebUSB 日志         |
+| Electron DevTools          | 在桌面应用中调试 DOM/IPC       |
+| `dev.to` / `noble` 蓝牙工具    | 蓝牙 BLE 测试与监听           |
+
+---
+
+## 🧠 五、常见开发环境错误排查
+
+| 错误场景                 | 原因                   | 解决方案                                       |
+| -------------------- | -------------------- | ------------------------------------------ |
+| 浏览器报错“没有权限连接设备”      | 未 HTTPS / 未用户触发      | 使用 `localhost` 并用按钮触发                      |
+| Node.js 报错“找不到设备”    | 没有驱动 / 无权限           | 安装驱动、管理员运行                                 |
+| Electron 页面无法访问 Node | 没开启 Node Integration | 修改 `webPreferences.nodeIntegration = true` |
+| 串口访问失败               | 被其他程序占用              | 确保未打开串口调试工具                                |
+| 打印无反应                | 打印机未设为默认 / 数据格式不支持   | 调试 `printer.getDefaultPrinterName()` 和类型设置 |
+
+---
+
+## ✅ 小结
+
+开发环境是硬件开发最容易踩坑的一步，建议：
+
+* **浏览器开发要 HTTPS + 手动授权 + Chrome 系**
+* **Node.js 需驱动安装完备、权限足够、测试设备连通性**
+* **Electron 项目结构清晰，IPC 通信流畅**
+
