--- a/docs/0201.md
+++ b/docs/0201.md
@@ -1,5 +1,129 @@
-# 网页端接入扫码枪（模拟键盘输入监听）
+## 网页端接入扫码枪（模拟键盘输入监听）
 
-## 内容概述
+---
 
-请在此处添加详细内容...
+扫码枪在网页端的接入是**最常见也是最简便**的一种硬件交互方式，因为：
+
+> 📌 **绝大多数扫码枪默认模拟 USB 键盘输入** —— 扫描后直接将内容输入到当前焦点的输入框，就像你在键盘上快速敲了一串数字/字符一样。
+
+---
+
+## 🧠 一、扫码枪的工作原理
+
+* **接口类型**：大部分扫码枪支持 USB 接口（键盘模拟或串口模式可切换）；
+* **扫码行为**：扫码后快速“输入”一串字符，通常结尾带一个 **回车符**（Enter）或 **Tab**；
+* **无需驱动**：主流浏览器默认支持，系统自动识别为 HID 键盘类设备。
+
+---
+
+## 🎯 二、网页端识别扫码枪的基本策略
+
+### ✅ 特征行为：
+
+| 特征              | 值              |
+| --------------- | -------------- |
+| 输入速度极快          | 几毫秒内完成         |
+| 输入固定长度          | 多为 8-30 位之间    |
+| 结尾为 Enter / Tab | 可用作分隔符         |
+| 不需要人手操作键盘       | 可以通过识别速率区别人工输入 |
+
+---
+
+## 🔧 三、基础实现：监听全局键盘输入 + 缓存输入流
+
+```html
+<input type="text" id="manualInput" placeholder="手动输入区">
+<div id="output"></div>
+```
+
+```js
+let buffer = '';
+let lastInputTime = Date.now();
+const threshold = 30; // ms，用于判定是否为快速连续输入
+const maxInterval = 300; // 结束符判断前最大等待时间
+
+document.addEventListener('keydown', (e) => {
+  const now = Date.now();
+
+  // 如果输入间隔太长，说明不是扫码行为，重置
+  if (now - lastInputTime > maxInterval) {
+    buffer = '';
+  }
+
+  lastInputTime = now;
+
+  if (e.key === 'Enter') {
+    if (buffer.length > 4) {
+      console.log('扫码成功:', buffer);
+      document.querySelector('#output').innerText = `扫码结果：${buffer}`;
+    }
+    buffer = '';
+  } else {
+    buffer += e.key;
+  }
+});
+```
+
+---
+
+## 📌 四、进阶优化：避免冲突 + 限定输入区域
+
+### ✅ 只在特定区域启用扫码监听（如聚焦页面某区域时）
+
+```js
+let active = true; // 控制扫码是否启用
+
+document.addEventListener('keydown', (e) => {
+  if (!active) return;
+
+  // ... 同上逻辑 ...
+});
+```
+
+### ✅ 判断扫码内容是否有效（使用正则或前缀）
+
+```js
+if (/^\d{8,}$/.test(buffer)) {
+  console.log('可能为条形码/商品码');
+}
+```
+
+---
+
+## 🧪 五、测试技巧与模拟
+
+* ✅ 可使用真实扫码枪扫描商品条码 / 二维码；
+* ✅ 模拟扫码行为：键盘输入数字 + 快速回车；
+* ✅ 使用浏览器控制台查看事件节奏与值（`console.log(e.key)`）。
+
+---
+
+## ⚠️ 六、常见问题与注意事项
+
+| 问题       | 说明                               |
+| -------- | -------------------------------- |
+| 与输入框冲突   | 避免 input 获取焦点，可用隐藏输入框            |
+| 无法区分手动输入 | 用“输入速度” + “字符格式”+ “结束符”联合判断      |
+| 多设备冲突    | 有的扫码枪支持串口与键盘双模式，建议固定为“键盘模拟”模式    |
+| 多页应用失效   | 注意保持扫码监听逻辑在主页面中活跃（如 SPA 应用需挂在根层） |
+
+---
+
+## 🎯 七、实战建议与扩展应用
+
+| 场景     | 建议做法                               |
+| ------ | ---------------------------------- |
+| 快递单录入  | 每扫码一次触发查单接口，自动定位用户                 |
+| 门店 POS | 扫码后查商品、自动填入结算单                     |
+| 用户签到   | 扫码员工卡或会员码进入系统页面                    |
+| 前端上报行为 | 将扫码信息通过 `fetch`/`WebSocket` 传给后端系统 |
+
+---
+
+## ✅ 小结
+
+* 扫码枪默认即为“键盘模拟器”，**无需驱动，开箱即用**；
+* 使用全局 `keydown` 事件、缓存输入流，并结合 `Enter` 键判断结束；
+* 可通过输入节奏、格式、上下文控制，精准区分“扫码行为”；
+* 若设备支持串口模式，可在桌面端用 `serialport` 实现更高级控制（下一节讲）。
+
