--- a/docs/0202.md
+++ b/docs/0202.md
@@ -1,5 +1,130 @@
-# 如何识别扫码枪输入 vs 人工键盘输入
+## ❓ 如何识别扫码枪输入 vs 人工键盘输入
 
-## 内容概述
+扫码枪模拟键盘输入，因此在技术上**和人工输入是一样的事件流（keydown/keypress）**。但我们可以**通过时间节奏、内容模式、输入设备特征等手段加以区分**。
 
-请在此处添加详细内容...
+---
+
+## ✅ 识别思路总览
+
+| 判别维度        | 说明                    | 适用性  |
+| ----------- | --------------------- | ---- |
+| **输入间隔**    | 扫码速度远快于人手（几毫秒 vs 百毫秒） | ⭐⭐⭐⭐ |
+| **整体输入耗时**  | 扫码一般 <200ms，人工输入 >1s  | ⭐⭐⭐  |
+| **固定字符格式**  | 扫码常为数字/固定长度           | ⭐⭐⭐⭐ |
+| **特定前缀/后缀** | 有些扫码枪可配置前缀（如 @）       | ⭐⭐⭐  |
+| **聚焦位置**    | 限制人工只能在输入框输入，扫码监听全局   | ⭐⭐   |
+| **事件来源设备**  | 有些系统层级可获取设备 ID（仅桌面）   | ⭐    |
+
+---
+
+## ⏱️ 实战：基于“输入时间间隔”识别扫码行为
+
+### 📌 思路：
+
+1. 每次按键记录时间戳；
+2. 若连续输入的时间间隔均极短（如 < 30ms），判断为扫码；
+3. 最后一个字符为 Enter → 执行扫码逻辑。
+
+### ✅ 示例代码：
+
+```js
+let buffer = '';
+let timestamps = [];
+const MAX_KEY_INTERVAL = 30;     // 每次按键不超过30ms
+const MAX_SCAN_DURATION = 300;   // 扫描总时间不超过300ms
+const MIN_LENGTH = 6;
+
+document.addEventListener('keydown', (e) => {
+  const now = Date.now();
+
+  if (buffer.length === 0) {
+    timestamps = [now];
+  } else {
+    timestamps.push(now);
+  }
+
+  if (e.key === 'Enter') {
+    const duration = timestamps[timestamps.length - 1] - timestamps[0];
+    const avgInterval = duration / (timestamps.length - 1);
+
+    if (
+      buffer.length >= MIN_LENGTH &&
+      duration < MAX_SCAN_DURATION &&
+      avgInterval < MAX_KEY_INTERVAL
+    ) {
+      console.log('🎯 识别为扫码枪输入：', buffer);
+      document.querySelector('#output').innerText = `扫码结果：${buffer}`;
+    } else {
+      console.log('⚠️ 识别为人工输入：', buffer);
+    }
+
+    buffer = '';
+    timestamps = [];
+  } else {
+    buffer += e.key;
+  }
+});
+```
+
+---
+
+## 🧠 高级增强策略
+
+### 1️⃣ 配置扫码枪：添加前缀 / 后缀（推荐）
+
+* 大多数扫码枪支持添加前缀（如 `@`）或后缀（如 `#`）；
+* 可在网页中匹配特征字符进行快速识别：
+
+```js
+if (buffer.startsWith('@') && buffer.endsWith('#')) {
+  const pureData = buffer.slice(1, -1);
+  // 是扫码行为
+}
+```
+
+---
+
+### 2️⃣ 手动聚焦区 vs 扫码监听区
+
+* 将输入框聚焦区仅用于人工输入（如修改地址等）；
+* 所有扫码行为监听 document，而不是 input；
+* 若 input 被 focus，则禁用扫码识别逻辑。
+
+---
+
+### 3️⃣ 节奏模型+内容模型双重判断（更稳健）
+
+```js
+const isLikelyScan = (text, timestamps) => {
+  const duration = timestamps[timestamps.length - 1] - timestamps[0];
+  const avgInterval = duration / (timestamps.length - 1);
+
+  return (
+    text.length >= 8 &&
+    /^[0-9A-Z\-]+$/.test(text) &&
+    duration < 300 &&
+    avgInterval < 30
+  );
+};
+```
+
+---
+
+## 🚫 不推荐方式
+
+* **navigator.keyboard** 等 API 目前无法识别真实设备类型；
+* 浏览器中无权限获取输入设备的 Vendor/Product ID；
+* 不要试图判断 `e.code` 或 `e.location` 来区别扫码枪和键盘。
+
+---
+
+## ✅ 小结
+
+| 策略        | 推荐度  | 说明            |
+| --------- | ---- | ------------- |
+| 输入时间节奏分析  | ⭐⭐⭐⭐ | 核心手段          |
+| 固定格式规则    | ⭐⭐⭐⭐ | 可配合正则         |
+| 添加扫码前后缀   | ⭐⭐⭐⭐ | 配置扫码枪最优方案     |
+| 聚焦策略+区域分隔 | ⭐⭐⭐  | 实战中常用         |
+| 事件源设备识别   | ⭐    | 浏览器基本无解，仅桌面可行 |
+
